Using stable release 0.1.0 in sample code

--- a/sample1/build.gradle
+++ b/sample1/build.gradle
@@ -1,16 +1,13 @@
+apply plugin: "java"
+
 repositories {
     mavenCentral()
-    maven {
-        url "https://oss.sonatype.org/content/repositories/snapshots/"
-    }
 }
-
-apply plugin: "java"
 
 dependencies {
     compile 'javax:javaee-api:7.0'
     compile 'ch.qos.logback:logback-classic:1.1.7'
 
-    testCompile 'fi.testee:testeefi-junit4-all:0.0.1-SNAPSHOT'
-    testCompile 'fi.testee:testeefi-easymock:0.0.1-SNAPSHOT'
+    testCompile 'fi.testee:testeefi-junit4-all:0.1.0'
+    testCompile 'fi.testee:testeefi-easymock:0.1.0'
 }
