--- a/cucumber/build.gradle
+++ b/cucumber/build.gradle
@@ -7,15 +7,18 @@ repositories {
 dependencies {
     compile 'javax:javaee-api:7.0'
 
-    testCompile 'fi.testee:testeefi-cucumber-all:0.4.2'
+    testCompile 'fi.testee:testeefi-cucumber-all:0.5.0'
     testCompile 'ch.qos.logback:logback-classic:1.1.7'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
 
-test << {
+test.doLast {
     javaexec {
         main = "cucumber.api.cli.Main"
         classpath = configurations.testRuntime + sourceSets.main.output + sourceSets.test.output
-        args = ['--plugin', 'pretty', '--glue', 'steps', 'src/test/resources']
+        args = [
+                '--plugin', 'pretty',
+                '--glue', 'steps', 'src/test/resources'
+        ]
     }
 }
